@@ -3,6 +3,8 @@ ViTables ChangeLog
 ** March 10, 2009 **
 The Preferences subpackage has been updated.
 
+Fixed a small bug in the "Select a file for opening" dialog.
+
 ** March 08, 2009 **
 New utility function added to utils.py module.
 
